# resume-chatbot

./: .ai-rules  AGENTS.md  CONTRIBUTING.md  Makefile  QUALITY.md  README.md  context_prompt.txt  pyproject.toml
app/api/: awards.py  certificates.py  chat.py  education.py  interests.py  languages.py  projects.py  publications.py  references.py  skills.py  volunteer.py  work.py
app/db/: base.py  session.py
app/models/: __init__.py  award.py  basics.py  certificate.py  education.py  interest.py  language.py  location.py  profile.py  project.py  publication.py  reference.py  resume.py  skill.py  volunteer.py  work.py
app/services/: __init__.py  award_service.py  certificate_service.py  education_service.py  interest_service.py  language_service.py  project_service.py  publication_service.py  reference_service.py  skill_service.py  volunteer_service.py  work_service.py
docs/: api.md  mcp_servers.md  tests.md
mcp_servers/: README.md  __init__.py  awards_server.py  certificates_server.py  education_server.py  interests_server.py  languages_server.py  projects_server.py  publications_server.py  references_server.py  skills_server.py  volunteer_server.py  work_server.py
test_chroma/: chroma.sqlite3
tests/api/: test_awards.py  test_certificates.py  test_education.py  test_interests.py  test_languages.py  test_projects.py  test_publications.py  test_references.py  test_skills.py  test_volunteer.py  test_work.py
tests/mcp/: __init__.py  conftest.py  test_awards_server.py  test_certificates_server.py  test_education_server.py  test_interests_server.py  (+7 more)
(+33 files in other folders)
